itemanalysis_1.0 (2018-08-17)

  * initial release on CRAN