@@ -10,6 +10,7 @@ importFrom(ggplot2, scale_x_continuous)
 importFrom(ggplot2, scale_y_continuous)
 importFrom(ggplot2, xlab)
 importFrom(ggplot2, ylab)
+importFrom(ggplot2,geom_smooth)
 importFrom(polycor, polyserial)
 importFrom(stats,cor)
 importFrom(stats,qnorm)
